--- a/src/login.html
+++ b/src/login.html
@@ -64,6 +64,7 @@
           </div>
           <div class="reusable__button-box">
             <button type="submit" class="reusable__button">Войти</button>
+            <p class="errorTextForSignIn">*Пользователь с таким именем уже существует</p>
           </div>
           <div class="registration__box">
             <a href="./index.html">Уже есть аккаунт</a>
